# hike

./: ChangeLog.md  README.md  pyproject.toml
src/hike/: __init__.py  __main__.py  hike.py  types.py
src/hike/commands/: __init__.py  editor.py  main.py  navigation.py
src/hike/data/: __init__.py  bookmarks.py  config.py  history.py  location_types.py
src/hike/editor/: screen.py
src/hike/messages/: __init__.py  history.py  opening.py
src/hike/providers/: bookmarks.py  editor.py  main.py
src/hike/screens/: editor.py  main.py
src/hike/support/: __init__.py  history.py  location_types.py
src/hike/widgets/: __init__.py  command_line.py  navigation.py  viewer.py
src/hike/widgets/command_line/: base_command.py  change_directory.py  contents.py  general.py  open_directory.py  open_file.py  open_from_forge.py  open_url.py  quit.py  widget.py
src/hike/widgets/navigation/: bookmarks_view.py  history_view.py  local_view.py  widget.py
tests/unit/: test_history.py  test_location_types.py
