[project]
name = "hike"
version = "0.0.1"
description = "Coming eventually"
authors = [
    { name = "Dave Pearson", email = "davep@davep.org" }
]
dependencies = [
    "textual>=1.0.0",
    "textual-enhanced>=0.4.0",
    "textual-fspicker>=0.2.0",
]
readme = "README.md"
requires-python = ">= 3.9"

[project.scripts]
hike = "hike.__main__:main"

[build-system]
# https://github.com/astral-sh/rye/issues/1446
requires = ["hatchling==1.26.3", "hatch-vcs"]
# requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "textual-dev>=1.7.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hike"]
